--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,10 @@
-<h1>Frealz</h1>
-<p>
-  This is the home page.
-</p>
+<div class="center hero-unit">
+  <h1>Frealz</h1>
+  <h2>
+    This is the home page.
+  </h2>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("foxhound.png", alt: "Frealz Yo"), 'http://whatmyfriendsthinkido.net/wp-content/uploads/2013/01/36.gif' %>
  
